--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,10 @@
 @import "themes/dark";
 
 .app {
-    font-size: 30px;
+    font-size: var(--font-m);
+
+    color: var(--color-primary);
+    background: var(--color-bg);
+
+    min-height: 100vh;
 }
