feat: add css-theme for ui-kit-component

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,5 +3,8 @@
   --color-bg-inverted: #e8e8ea;
 
   --color-primary: #049604;
+  --color-primary-inverted: #02332c2;
+
   --color-secondary: #04ff04;
+  --color-secondary-inverted: #0449e0;
 }
