--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,3 +1,11 @@
 .appLink {
-  color: var(--primary-color);
+  color: var(--color-primary);
+}
+
+.primary {
+  color: var(--color-primary);
+}
+
+.inverted {
+  color: var(--color-primary-inverted);
 }
