--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -3,5 +3,8 @@
   --color-bg-inverted: #0e0e65;
 
   --color-primary: #02332c2;
+  --color-primary-inverted: #049604;
+
   --color-secondary: #0449e0;
+  --color-secondary-inverted: #04ff04;
 }
