lint: install stylelint, configure stylelintrs.json, create npm-scripts 'lint:scss' & 'lint:scss:fix'

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,8 @@
 .app.dark {
-  --color-bg: #0e0e65;
-  --color-bg-inverted: #e8e8ea;
-
-  --color-primary: #049604;
-  --color-primary-inverted: #02332c2;
-
-  --color-secondary: #04ff04;
-  --color-secondary-inverted: #0449e0;
+    --color-bg: #0e0e65;
+    --color-bg-inverted: #e8e8ea;
+    --color-primary: #049604;
+    --color-primary-inverted: #2332c2;
+    --color-secondary: #04ff04;
+    --color-secondary-inverted: #0449e0;
 }
