--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,10 +1,8 @@
 :root {
-  --color-bg: #e8e8ea;
-  --color-bg-inverted: #0e0e65;
-
-  --color-primary: #02332c2;
-  --color-primary-inverted: #049604;
-
-  --color-secondary: #0449e0;
-  --color-secondary-inverted: #04ff04;
+    --color-bg: #e8e8ea;
+    --color-bg-inverted: #0e0e65;
+    --color-primary: #2332c2;
+    --color-primary-inverted: #049604;
+    --color-secondary: #0449e0;
+    --color-secondary-inverted: #04ff04;
 }
