feat: add PageLoader (widget) and Loader (shared) as fallback in asyncImports

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,7 +1,7 @@
 .sidebar {
     position: relative;
     width: var(--sidebar-width);
-    height: calc(100vh - var(--navbar-heght));
+    height: calc(100vh - var(--navbar-height));
     background: var(--color-bg-inverted);
     transition: width 0.3s;
 }
