--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: var(--navbar-heght);
+    height: var(--navbar-height);
     padding: 20px;
     background-color: var(--color-bg-inverted);
 }
